--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:design:24.2.0'
     compile 'com.facebook.android:facebook-android-sdk:4.18.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
 }
